<resources>
    <string name="app_name">lights</string>
    <string name="enter_room">enter_room</string>
    <string name="ok">ok</string>
    <string name="light">light</string>
    <string name="noise">noise</string>
    <string name="image_content_description">image_content_description</string>
    <string name="lightonoff">lightonoff</string>
    <string name="ringonoff">ringonoff</string>
    <string name="DeleteLight">Delete Light</string>
    <string name="RoomID">Room ID</string>
    <string name="EnterLightId">Enter Light ID</string>
    <string name="Refresh">Refresh</string>
</resources>
