<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContextManagementActivity"
    tools:layout_editor_absoluteY="81dp">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
<<<<<<< HEAD
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/EnterLightId"
                android:textAlignment="center"
                android:textSize="18sp" />
=======
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="enter_light"
                    android:textAlignment="center"/>
>>>>>>> 23b6617cf14c9da16d650d8a11837d371ee4bb86

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".70"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/buttonCheck"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:onClick="onClick"
                    android:text="@string/Refresh"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </LinearLayout>

        <requestFocus />

        <RelativeLayout
            android:id="@+id/contextLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="visible">

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:padding="25dip">

                <TableRow
                    android:id="@+id/tableRowLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TextView
                        android:id="@+id/textViewLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/light"
                        android:textAlignment="gravity"
                        android:textSize="24sp" />

                    <TextView
                            android:id="@+id/textViewLightValue"
                            android:layout_width="137dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/red"
                            android:textSize="24sp" android:visibility="visible"/>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowNoise"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:padding="5dip">

                    <TextView
<<<<<<< HEAD
                        android:id="@+id/textViewNoise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/RoomID"
                        android:textAlignment="gravity"
                        android:textSize="24sp" />
=======
                            android:id="@+id/textViewNoise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:text="Room"
                            android:textAlignment="gravity"
                            android:textSize="24sp"/>
>>>>>>> 23b6617cf14c9da16d650d8a11837d371ee4bb86

                    <TextView
                        android:id="@+id/textViewNoiseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="24sp" />
                </TableRow>

                <com.divyanshu.colorseekbar.ColorSeekBar
                    android:id="@+id/color_seek_bar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </TableLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tableLayout1"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/ic_bulb_on" />

            <LinearLayout
                android:id="@+id/linearLayoutButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/buttonSwitchLight"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginRight="14dp"
                    android:onClick="switchLight"
                    android:text="@string/lightonoff"
                    tools:ignore="OnClick" />

                <Button
<<<<<<< HEAD
                    android:id="@+id/buttonDeleteLight"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginRight="14dp"
                    android:onClick="switchRinger"
                    android:text="@string/DeleteLight"
                    tools:ignore="OnClick" />
=======
                        android:id="@+id/buttonDeleteLight"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginRight="14dp"
                        android:onClick="switchRinger"
                        android:text="DeleteLight"
                        tools:ignore="OnClick"/>
>>>>>>> 23b6617cf14c9da16d650d8a11837d371ee4bb86
            </LinearLayout>

            <TableRow
                android:layout_width="247dp"
                android:layout_height="43dp"

                android:layout_above="@+id/linearLayoutButtons"
                android:layout_below="@+id/imageView1"


                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="15dp">


                <TextView
                    android:id="@+id/colorviewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableRow>

        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>